--- a/llama-2-70b-chat-h100.ipynb
+++ b/llama-2-70b-chat-h100.ipynb
@@ -6,12 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "!git lfs install\n",
     "!git clone -b v1.8-lambda https://github.com/camenduru/text-generation-webui /home/ubuntu/text-generation-webui\n",
     "%cd /home/ubuntu/text-generation-webui\n",
     "!pip install -r requirements.txt\n",
-    "!pip install protobuf==3.20.3 -U\n",
+    "pip install protobuf==3.20.3 -U\n",
     "\n",
     "!sudo apt -y install -qq aria2\n",
     "\n",
