--- a/llama-2-70b-chat-h100.ipynb
+++ b/llama-2-70b-chat-h100.ipynb
@@ -9,7 +9,8 @@
     "!git clone -b v1.8-lambda https://github.com/camenduru/text-generation-webui /home/ubuntu/text-generation-webui\n",
     "%cd /home/ubuntu/text-generation-webui\n",
     "!pip install -r requirements.txt\n",
-    "!pip install protobuf==3.20.3 -U\n",
+    "!pip install -U torch torchvision torchaudio torchtext torchdata --extra-index-url https://download.pytorch.org/whl/cu118\n",
+    "!pip install protobuf==3.20.3 bitsandbytes -U\n",
     "\n",
     "!sudo apt -y install -qq aria2\n",
     "\n",
