--- a/llama-2-70b-chat-h100.ipynb
+++ b/llama-2-70b-chat-h100.ipynb
@@ -10,7 +10,14 @@
     "%cd /home/ubuntu/text-generation-webui\n",
     "!pip install -r requirements.txt\n",
     "!pip install -U torch torchvision torchaudio torchtext torchdata --extra-index-url https://download.pytorch.org/whl/cu118\n",
-    "!pip install protobuf==3.20.3 bitsandbytes -U\n",
+    "!pip install protobuf==3.20.3 -U\n",
+    "\n",
+    "%cd /home/ubuntu\n",
+    "!git clone -b 0.40.0 https://github.com/TimDettmers/bitsandbytes\n",
+    "%cd /home/ubuntu/bitsandbytes\n",
+    "!sudo CUDA_VERSION=118 make cuda11x\n",
+    "!sudo python setup.py install\n",
+    "!cp /home/ubuntu/.local/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda118.so /home/ubuntu/.local/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cpu.so\n",
     "\n",
     "!sudo apt -y install -qq aria2\n",
     "\n",
@@ -36,6 +43,7 @@
     "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/4bit/Llama-2-70b-chat-hf/raw/main/config.json -d /home/ubuntu/text-generation-webui/models/Llama-2-70b-chat-hf -o config.json\n",
     "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/4bit/Llama-2-70b-chat-hf/raw/main/generation_config.json -d /home/ubuntu/text-generation-webui/models/Llama-2-70b-chat-hf -o generation_config.json\n",
     "\n",
+    "%cd /home/ubuntu/text-generation-webui\n",
     "!python server.py --share --chat --multi-user --listen-port 8266 --load-in-8bit --model /home/ubuntu/text-generation-webui/models/Llama-2-70b-chat-hf"
    ]
   }
