--- a/llama-2-70b-chat-h100.ipynb
+++ b/llama-2-70b-chat-h100.ipynb
@@ -13,7 +13,7 @@
     "!pip install protobuf==3.20.3 -U\n",
     "\n",
     "%cd /home/ubuntu\n",
-    "!git clone -b 0.40.0 https://github.com/TimDettmers/bitsandbytes\n",
+    "!git clone https://github.com/TimDettmers/bitsandbytes\n",
     "%cd /home/ubuntu/bitsandbytes\n",
     "!sudo CUDA_VERSION=118 make cuda11x\n",
     "!sudo python setup.py install\n",
