--- a/llama-2-70b-chat-h100.ipynb
+++ b/llama-2-70b-chat-h100.ipynb
@@ -11,6 +11,8 @@
     "!pip install -r requirements.txt\n",
     "!pip install -U torch torchvision torchaudio torchtext torchdata --extra-index-url https://download.pytorch.org/whl/cu118\n",
     "!pip install protobuf==3.20.3 bitsandbytes -U\n",
+    "!pip install -U git+https://github.com/huggingface/transformers\n",
+    "# !pip install -U git+https://github.com/huggingface/peft\n",
     "\n",
     "# %cd /home/ubuntu\n",
     "# !git clone https://github.com/TimDettmers/bitsandbytes\n",
